@@ -3,6 +3,8 @@ partman-partitioning (40) UNRELEASED; urgency=low
   * Rename dev to bdev in get_ntfs_resize_range; bash clobbers the existing
     contents of dev when 'local bdev' is executed, and we need those
     contents.
+  * Handle /dev/hd* and /dev/sd* device names in get_ntfs_resize_range as
+    well as devfs-style device names.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 23 May 2006 19:16:50 +0100
 
